[gd_scene load_steps=2 format=3 uid="uid://b6ma3vj8q45kp"]

[ext_resource type="Script" uid="uid://b5ka5x8570w6w" path="res://scripts/ui/intro.gd" id="1_ioskq"]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ioskq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.0
offset_top = -112.0
offset_right = 396.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/bold_italics_font_size = 50
theme_override_font_sizes/italics_font_size = 50
theme_override_font_sizes/mono_font_size = 50
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "Another restless night... [pulse].[/pulse]"

[node name="FrontColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="SkipButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -44.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "skip"

[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
